--- a/src/main/webapp/WEB-INF/templates/common/footer.html
+++ b/src/main/webapp/WEB-INF/templates/common/footer.html
@@ -17,6 +17,9 @@
         <li th:if="${loginUser.getUsername()=='xm'}" >
           © 2017 Copyright 珠海希梦电子科技有限公司
         </li>
+        <li th:if="${loginUser.getUsername()=='nande'}" >
+          © 2017 Copyright 南德
+        </li>
       </div>
     </div>
   </footer>
